--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^4.2.3",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
     "pdfjs-dist": "^1.9.583",
     "webpack": "2.7.0"
